Update Application.java